objects/vlocity_cmt__OfferMigrationComponentMapping__c.object
<CustomObject>
    <description>This object defines the component mappings between the offers within Offer Migration Plan.</description>
    <fields>
        <fullName>vlocity_cmt__OfferMigrationPlanId__c</fullName>
        <label>Offer Migration Plan</label>
        <referenceTo>vlocity_cmt__OfferMigrationPlan__c</referenceTo>
        <relationshipLabel>Offer Migration Component Mappings</relationshipLabel>
        <relationshipName>OfferMigrationComponentMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>SourceProductId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>TargetProductId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This tells if any component mapping is active or inactive.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer Migration Component Mapping</label>
    <nameField>
        <label>Offer Migration Component Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Migration Component Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>